# pioneer-ledger-tui

./: .gitignore  DECISIONS.md  DOGFOOD.md  Makefile  README.md  oregon_trail.py  pyproject.toml
oregon_trail_tui/: __init__.py  app.py  game.py  landmarks.py  screens.py
pioneer_ledger_tui/: __init__.py  app.py  tui.tcss
screenshots/: README.md  gameplay.tcell  hero.tcell
tests/: perf.py  playtest.py  qa.py
